--- a/index.html
+++ b/index.html
@@ -34,6 +34,20 @@
             <img src="images/zishan.png" alt="">
         </div>
     </section>
+
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/zishan2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>became a web Devloper</h2>
+            <p>I already learned the basic HTML and CSS.I can build any simple websit. I can even teachmy grandma how to
+                make a simple websit. My goal is to build 3 websites and learned advance topics</p>
+            <a target="_blank" href="" class="link-button">DOWNLOAD RESUME
+            </a>
+        </div>
+    </section>
 </body>
 
 </html>
