footer and experience aded

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <section class="top-banner">
+    <section class="top-banner flexiable-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="orange-color">Zishan's</span> Portfolio!</h1>
@@ -35,7 +35,7 @@
         </div>
     </section>
 
-    <section class="dream-big">
+    <section class="dream-big flexiable-container">
         <div class="half-width">
             <img src="images/zishan2.png" alt="">
         </div>
@@ -48,6 +48,33 @@
             </a>
         </div>
     </section>
+    <section class="experiance-area">
+        <h1>EXPERIENCES</h1>
+        <div class="flexiable-container ">
+            <div id="full-stack-experiance" class=" experience-item">
+                <h2>Full Stack Web Devloper</h2>
+                <h3 class="orange-color">2022-Present | Pro Level Devloper</h3>
+                <p>I am the master of HTML, CSS and javascript. I know everything needed to make a website function,
+                    efficient, I didn't stop with the web. I went beyond with most populer javascriptframework caled
+                    vues
+                    JS.I even know the devlopment server and security. I will give 100% web solution.</p>
+            </div>
+
+            <div id="web-dev-experience" class="experience-item">
+                <h2>Baby Web Devloper</h2>
+                <h3 class="orange-color">2021-2022| Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But i made myself as a remove web
+                    developer. I made their website and showed it to them. They
+                    liked it. And uploaded the content, It was fun working at
+                    Programming Hero,</p>
+            </div>
+
+        </div>
+    </section>
+
+    <footer>
+        <p>@ Tasnim Anjum 2022, a Progrtamming hero initiative.</p>
+    </footer>
 </body>
 
 </html>
